@@ -1,3 +1,8 @@
+2007-05-16  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-ems.el (w3m-switch-to-buffer): Work just like switch-to-buffer.
+	Suggested by Robert J. Chassell <bob@rattlesnake.com>.
+
 2007-05-11  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-url-encode-string, w3m-url-transfer-encode-string): Use
